--- a/src/IfcQa.Core/IfcQa.Core.csproj
+++ b/src/IfcQa.Core/IfcQa.Core.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Rules\RuleWallHasPsetWallCommon.cs" />
+    <Compile Remove="Rules\RuleWallHasQtoWallBaseQuantities.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Xbim.Essentials" Version="6.0.563" />
     <PackageReference Include="Xbim.Ifc2x3" Version="6.0.563" />
     <PackageReference Include="Xbim.Ifc4" Version="6.0.563" />
